...
    private var logoImageView = UIImageView()
    
    private lazy var signInButton: UIButton = {
        let button = UIButton()
        button.clipsToBounds = true
        button.layer.cornerRadius = .cornerRadius
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    private var screenModel: AuthScreenModel = .empty {
        didSet { setup() }
    }
...
